Fix all warnings provided by IDE code inspection